examples/datalog/10_edge_cases/48_all_same_values.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_all_same
Knowledge graph 'test_all_same' created.
Switched to knowledge graph: test_all_same
> .kg use test_all_same
Switched to knowledge graph: test_all_same
> +same[(5,), (5,), (5,)].
Inserted 1 fact(s) into 'same'.
> ?- same(X).
1 rows:
  (5)
> +distinct_count(<COUNT_DISTINCT:X>) :- same(X).
Script error: Parse error: Invalid term: '<COUNT_DISTINCT:X>'
